# CH-Api-Budgy

./: .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  ENVCONFIG.md  README.md  config.toml
.cargo/: audit.toml
migrations/: 0001_init.sql  0002_comptes_transactions.sql  0003_schema_chiffre_budget.sql  0004_bank_account_dedup.sql  0005_worker_synchro.sql  0006_consent_etablissement.sql  0007_dedup_key_hmac.sql  0008_drop_us0_tables.sql  0009_categories.sql  0010_categorisation_transaction.sql  0011_category_owner.sql  0012_regles_categorisation.sql  0013_budgets_mensuels.sql  0014_transaction_is_recurrent.sql
src/: config.rs  crypto.rs  db.rs  error.rs  extract.rs  lib.rs  main.rs  routes.rs  state.rs
tests/: qvl_durcissement_securite.rs  qvl_scrum230_independant.rs  qvl_scrum238_independant.rs  qvl_scrum240_transactions.rs  qvl_scrum246_independant.rs  qvl_scrum252_independant.rs  scrum216_ca01_health.rs  scrum217_ca02_migration.rs  scrum219_jwt.rs  scrum221_chiffrement.rs  scrum221_crypto.rs  scrum229_categories.rs  scrum231_categorisation_manuelle.rs  scrum232_regles_categorisation.rs  scrum233_application_regles.rs  scrum234_budgets.rs  scrum235_reste_a_depenser.rs  scrum236_detection_recurrences.rs  scrum236_synchro_recurrences.rs  scrum237_previsionnel.rs  scrum239_depenses_par_categorie.rs  scrum244_schema_chiffre_aead.rs  scrum245_bank_data_source_mock.rs  scrum245_ports_ecriture.rs  scrum245_qa_bascule_config.rs  scrum246_jwt_applicatif.rs  scrum246_mapping_enable_banking.rs  scrum247_idempotence_callback.rs  scrum247_rattachement_banque.rs  (+12 more)
(+81 files in other folders)
