[package]
name = "ch-api-budgy"
version = "0.1.0"
edition = "2024"
description = "Microservice Budgy CustHome (budget personnel)"

[dependencies]
axum = { version = "0.8" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate", "macros"] }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
figment = { version = "0.10", features = ["toml", "env"] }
dotenvy = "0.15"
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
chacha20poly1305 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
